--- a/index.html
+++ b/index.html
@@ -5,33 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="//fonts.googleapis.com/css?family=Roboto|Open+Sans:200,300,400,700,800,900&amp;subset=latin">
     <link rel="stylesheet" href="style.css">
-    <title>Templates</title>
+    <title>Tamplates</title>
 </head>
 
 <body>
-    <section class="sec">
-        <div class="head"><img src="https://img.icons8.com/ios-glyphs/30/ffffff/menu--v1.png" /></div>
-        <div class="home">
-        <img class="img"
-            src="https://images03.nicepage.com/a1389d7bc73adea1e1c1fb7e/915988c20bba56c0b5691503/pexels-photo-3218467.jpeg"
-            alt="">
-            <div class="shadow"></div>
-            </div>
-        <div class="con">
-            <img class="img2"
-                src="https://images03.nicepage.com/a1389d7bc73adea1e1c1fb7e/1f7591a43d715b62a6734fb0/Untitled-1.png"
-                alt="">
-            <h1>One Step to Making a Good Start</h1>
-            <p>Mauris fermentum tortor non enim aliquet condimentum. Nam aliquam pretium feugiat. Duis sem est, viverra
-                eu interdum ac, suscipit nec mauris. Suspendisse commodo tempor sagittis! In justo est, sollicitudin eu
-                scelerisque pretium, placerat eget elit.</p>
-        <div class="path">
-            <svg height="52" width="178">
-                <path d="M150 0 L75 200 L225 200 Z" stroke-width="2" stroke-linejoin="round" stroke="#fff" />
-            </svg>
+    <section>
+        <div class="shadow"></div>
+        <div class="menu1">
         </div>
+        <div class="header">
+            <div class="content">
+                <div class="menu">
+                    <img src="https://img.icons8.com/ios-glyphs/30/ffffff/menu--v1.png" alt="" />
+                </div>
+                <img src="https://images03.nicepage.com/a1389d7bc73adea1e1c1fb7e/1f7591a43d715b62a6734fb0/Untitled-1.png"
+                    class="logo"></img>
+                <div class="title">One Step to Making a Good Start</div>
+                <div class="para">Mauris fermentum tortor non enim aliquet condimentum. Nam aliquam
+                    pretium feugiat.Duis sem est, viverra eu interdum ac, suscipit nec mauris. Suspendisse commodo
+                    tempor
+                    sagittis!
+                    In justo est, sollicitudin eu scelerisque pretium, placerat eget elit.</div>
+                <div class="path">
+                    <svg width="52" height="38" viewBox="0 0 21 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M11.3217 15.0702L20.3217 2.07017C20.4255 1.92014 20.4863 1.74458 20.4975 1.56248C20.5087 1.38039 20.4698 1.1987 20.3851 1.0371C20.3005 0.875494 20.1732 0.740131 20.0171 0.645665C19.8611 0.551199 19.6821 0.50123 19.4997 0.501168L1.49969 0.501169C1.31716 0.501048 1.13809 0.550884 0.981867 0.645277C0.825647 0.73967 0.698241 0.875019 0.613457 1.03666C0.528673 1.19829 0.489744 1.38005 0.500889 1.56223C0.512035 1.74442 0.57283 1.92007 0.676686 2.07017L9.67669 15.0702C9.76912 15.2026 9.89216 15.3108 10.0354 15.3855C10.1786 15.4601 10.3377 15.4991 10.4992 15.4991C10.6607 15.4991 10.8198 15.4601 10.963 15.3855C11.1062 15.3108 11.2293 15.2026 11.3217 15.0702Z"
+                            fill="white" />
+                    </svg>
+                </div>
+            </div>
         </div>
     </section>
 
