--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <section>
-        <div class="shadow"></div>
+    <section id="scroll-bar">
         <div class="menu1">
         </div>
+        <div class="scroll"></div>
         <div class="header">
             <div class="content">
                 <div class="menu">
@@ -37,7 +37,7 @@
             </div>
         </div>
     </section>
-
+    <script src="app.js"></script>
 </body>
 
 </html>
