--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 
 <body>
     <section id="scroll-bar">
-        <div class="menu1">
-        </div>
-        <div class="scroll"></div>
         <div class="header">
             <div class="content">
                 <div class="menu">
@@ -37,6 +34,38 @@
             </div>
         </div>
     </section>
+    <div class="cont_1">
+        <div class="head">
+        <p class="p_1">OUR MENU</p>
+        <h1 class="h1">Delicious From The Chef</h1>
+        </div>
+        <div class="box_container">
+            <div class="box">
+                <p class="p1">PEAR SALAD / $11</p>
+                <p class="p2">Reid’s Orchard Pears / Bitter Greens / Granola / Big Firefly / Farms Black and Blue / Pine Nut Vinaigrette</p>
+            </div>
+            <div class="box">
+                <p class="p1">BRODETTO DI PESCE / $9</p>
+                <p class="p2">Adriatic Seafood Soup / Clams / Prawns / Livornese / Langoustine Scallop / Celery / Olive</p>
+            </div>
+            <div class="box">
+                <p class="p1">FARM GREENS / $9</p>
+                <p class="p2">Honey Vinaigrette / House Cheese Crouton / Fine Herbs</p>
+            </div>
+            <div class="box">
+                <p class="p1">GRILLED KALE / $9</p>
+                <p class="p2">Bitter Greens / House Cheese Crouton / Kamon Iberico</p>
+            </div>
+            <div class="box">
+                <p class="p1">RICOTTA GNUD / $18</p>
+                <p class="p2">Marinated Sardine / Red Currant / Chanterelles / Pine Nuts / Mantecato Vitello / Fennel / Olive / Pepitas</p>
+            </div>
+            <div class="box">
+                <p class="p1">CANESTRELLI / $18</p>
+                <p class="p2">Reid Orchatd Pears / Bitter Greens / House Cheese Crouton / Marinated Sardine / Chanterelles / Clams</p>
+            </div>
+        </div>
+</div>
     <script src="app.js"></script>
 </body>
 
